package bioCanteenApp.address;

public enum Municipality {
    AMARANTE,
    BAIAO,
    CASTELO_DE_PAIVA,
    CELORICO_DE_BASTO,
    CINFAES,
    FELGUEIRAS,
    LOUSADA,
    MARCO_DE_CANAVESES,
    PAÇOS_DE_FERREIRA,
    PENAFIEL,
    RESENDE

}
