package bioCanteenApp.dish.domain;

public enum DishType {
    MEAT,
    FISH,
    VEGETARIAN,
    DIET,
    KOSHER,
}