package bioCanteenApp.menu.domain;

public enum MenuStatus {
    GENERATED,
    EDITED,
    PUBLISHED,
    CLOSED
}