package bioCanteenApp.notifications.dto;

public enum NotificationType {
    INFO,
    ALERT,
    WARNING,
    SUCCESS,
    STOCK_ALERT,
    DEVIATION_ALERT,
}
