package bioCanteenApp.suppliers.domain;

public enum InterviewStatus {
    APPROVED,
    REJECTED,
    TO_BE_DONE,
}
