package bioCanteenApp.users.domain;

public enum Role {
    ADMIN,
    DIETITIAN,
    USER,
    CANTEEN_MANAGER,
    NETWORK_MANAGER,
    DINING_HALL_MANAGER
}
